small change in each file

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 91,
    "id": "0b4607ec-0080-4528-b329-1594036665e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "1c8cb8d3",
    "metadata": {},
    "outputs": [
@@ -309,7 +310,7 @@
        "[725 rows x 11 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "21f947b5",
    "metadata": {},
    "outputs": [
@@ -602,7 +603,7 @@
        "[974 rows x 11 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "8c2b0888",
    "metadata": {},
    "outputs": [
@@ -894,7 +895,7 @@
        "[1233 rows x 11 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "ad0e569e",
    "metadata": {},
    "outputs": [],
@@ -970,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "693208f2-8e04-4ac3-95b3-52d9887a9721",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1212,7 @@
        "[2932 rows x 11 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "ef40a757-327d-475f-bc99-9a5cd7e22485",
    "metadata": {},
    "outputs": [
@@ -1278,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "d0ed5420-b711-4a6b-a66c-539e6769569a",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1289,7 @@
        "39"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "19f6380b-3898-4380-bb5f-e1a462a09fc5",
    "metadata": {},
    "outputs": [],
@@ -1352,35 +1353,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "bf3c31bc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Year                       int64\n",
-       "Age                      float64\n",
-       "Gender                    object\n",
-       "City                      object\n",
-       "Position                  object\n",
-       "Years of experience       object\n",
-       "Current level             object\n",
-       "Current Salary           float64\n",
-       "Main language at work     object\n",
-       "Company size              object\n",
-       "Company type              object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 2893 entries, 0 to 2931\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Year                   2893 non-null   int64  \n",
+      " 1   Age                    2893 non-null   float64\n",
+      " 2   Gender                 2893 non-null   object \n",
+      " 3   City                   2876 non-null   object \n",
+      " 4   Position               2893 non-null   object \n",
+      " 5   Years of experience    2882 non-null   object \n",
+      " 6   Current level          2893 non-null   object \n",
+      " 7   Current Salary         2893 non-null   float64\n",
+      " 8   Main language at work  2876 non-null   object \n",
+      " 9   Company size           2867 non-null   object \n",
+      " 10  Company type           2826 non-null   object \n",
+      "dtypes: float64(2), int64(1), object(8)\n",
+      "memory usage: 271.2+ KB\n"
+     ]
     }
    ],
    "source": [
     "#Find out the data type of each column in the dataframe\n",
-    "df.dtypes"
+    "df.info()"
    ]
   },
   {
@@ -1393,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "9e791350-60ba-4b68-b185-1a329ad633c3",
    "metadata": {},
    "outputs": [],
@@ -1446,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "id": "62157c6a-c454-4ee7-936f-8d3b1edb8d09",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1538,7 @@
        "max             2020.0  66.0                 40.0     500000000.0"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "f32fa428",
    "metadata": {},
    "outputs": [],
@@ -1578,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "id": "20bf23dc-d978-4906-9cf8-8369fab392ca",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1670,7 @@
        "max             2020.0  66.0                 40.0        850000.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1687,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "id": "79156ae3-5cff-4cd1-9fce-00c1d14e8340",
    "metadata": {},
    "outputs": [],
@@ -1697,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "id": "ba3cefe9-cccb-49de-a375-25a6cb444080",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1789,7 @@
        "max             2020.0  66.0                 40.0        300000.0"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "id": "407ed9d7",
    "metadata": {},
    "outputs": [
@@ -1866,7 +1870,7 @@
        "2267      Startup  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "id": "1859e6d7-9950-4141-91ed-b02d27064a94",
    "metadata": {},
    "outputs": [],
@@ -1920,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "id": "7eedee38-9644-4af5-b010-7ac6b1f0ff6c",
    "metadata": {},
    "outputs": [
@@ -2026,7 +2030,7 @@
        "value_ratios   {'Product': 62.7, 'Startup': 19.8, 'Consulting...  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "id": "30cf116d",
    "metadata": {},
    "outputs": [],
@@ -2085,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "id": "69886977-22b0-46ae-baf4-1f821f1a8b8a",
    "metadata": {},
    "outputs": [],
@@ -2110,7 +2114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
